# AEB-Tracker

./: .gitignore  CMakeLists.txt  README.md  kalman.cpp  kalman.hpp  main.cpp  parameters.h
configs/: car.yaml  shapes.yaml  spin-dot.yaml
